Commit, intake ready

--- a/build.gradle
+++ b/build.gradle
@@ -47,8 +47,10 @@ def includeDesktopSupport = false
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
+repositories{maven { url 'https://nexus.otake.pw/repository/maven-public/' }}
 dependencies {
     
+
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
 
@@ -65,7 +67,7 @@ dependencies {
     nativeRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.desktop)
     nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
     simulationRelease wpi.sim.enableRelease()
-
+    implementation 'pw.otake.pseudoresonance:pixy2-java-api:1.4.1'
     testImplementation 'junit:junit:4.12'
 }
 
